feat : update model transformation and csf file to model's use

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -336,6 +336,37 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "98f7d063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imc_result(imc):\n",
+    "    if imc < 16.5:\n",
+    "        return \"famine\"\n",
+    "    \n",
+    "    if imc >= 16.5 and imc < 18.5:\n",
+    "        return \"maigreur\"\n",
+    "    \n",
+    "    if imc >=18.5 and imc < 25:\n",
+    "        return \"corpulence noramele\"\n",
+    "    \n",
+    "    if imc >= 25 and imc < 30:\n",
+    "        return \"surpoids\"\n",
+    "    \n",
+    "    if imc >=30 and imc < 35:\n",
+    "        return \"obésité modérée\"\n",
+    "    \n",
+    "    if imc >=35 and imc < 40:\n",
+    "        return \"obésité sévère\"\n",
+    "    \n",
+    "    return \"obésité morbide\"\n",
+    "\n",
+    "df_heart['imc_result'] = df_heart.apply(lambda x: imc_result(x[\"imc\"]), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "0d309ed9",
    "metadata": {},
    "outputs": [],
@@ -350,14 +381,20 @@
     "    if press_systo < 140 and press_diasto < 90:\n",
     "        return \"noramel élevée\"\n",
     "    \n",
-    "    return \"élevée\"\n",
+    "    if press_systo < 150 and press_diasto < 100:\n",
+    "        return \"hypertension légère\"\n",
+    "    \n",
+    "    if press_systo < 180 and press_diasto < 110:\n",
+    "        return \"hypertension modérée\"    \n",
+    "    \n",
+    "    return \"hypertension sévère\"\n",
     "\n",
     "df_heart[\"pression_arterielle\"] = df_heart.apply(lambda x: pression_arterielle(x[\"pression_systo\"], x[\"pression_diasto\"]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f761b122",
    "metadata": {},
    "outputs": [],
@@ -367,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "17941b1b",
    "metadata": {},
    "outputs": [
@@ -405,11 +442,13 @@
        "      <th>activite_physique</th>\n",
        "      <th>malade</th>\n",
        "      <th>imc</th>\n",
+       "      <th>imc_result</th>\n",
        "      <th>pression_arterielle</th>\n",
        "      <th>age_annee</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -443,6 +482,7 @@
        "      <td>1</td>\n",
        "      <td>non</td>\n",
        "      <td>21.967120</td>\n",
+       "      <td>corpulence noramele</td>\n",
        "      <td>normale</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
@@ -461,7 +501,8 @@
        "      <td>1</td>\n",
        "      <td>oui</td>\n",
        "      <td>34.927679</td>\n",
-       "      <td>élevée</td>\n",
+       "      <td>obésité modérée</td>\n",
+       "      <td>hypertension légère</td>\n",
        "      <td>55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -479,6 +520,7 @@
        "      <td>0</td>\n",
        "      <td>oui</td>\n",
        "      <td>23.507805</td>\n",
+       "      <td>corpulence noramele</td>\n",
        "      <td>noramel élevée</td>\n",
        "      <td>52</td>\n",
        "    </tr>\n",
@@ -497,7 +539,8 @@
        "      <td>1</td>\n",
        "      <td>oui</td>\n",
        "      <td>28.710479</td>\n",
-       "      <td>élevée</td>\n",
+       "      <td>surpoids</td>\n",
+       "      <td>hypertension modérée</td>\n",
        "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -515,11 +558,13 @@
        "      <td>0</td>\n",
        "      <td>non</td>\n",
        "      <td>23.011177</td>\n",
+       "      <td>corpulence noramele</td>\n",
        "      <td>optimale</td>\n",
        "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -551,6 +596,7 @@
        "      <td>1</td>\n",
        "      <td>non</td>\n",
        "      <td>26.927438</td>\n",
+       "      <td>surpoids</td>\n",
        "      <td>normale</td>\n",
        "      <td>53</td>\n",
        "    </tr>\n",
@@ -569,7 +615,8 @@
        "      <td>1</td>\n",
        "      <td>oui</td>\n",
        "      <td>50.472681</td>\n",
-       "      <td>élevée</td>\n",
+       "      <td>obésité morbide</td>\n",
+       "      <td>hypertension légère</td>\n",
        "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -587,7 +634,8 @@
        "      <td>0</td>\n",
        "      <td>oui</td>\n",
        "      <td>31.353579</td>\n",
-       "      <td>élevée</td>\n",
+       "      <td>obésité modérée</td>\n",
+       "      <td>hypertension sévère</td>\n",
        "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -605,6 +653,7 @@
        "      <td>0</td>\n",
        "      <td>oui</td>\n",
        "      <td>27.099251</td>\n",
+       "      <td>surpoids</td>\n",
        "      <td>noramel élevée</td>\n",
        "      <td>61</td>\n",
        "    </tr>\n",
@@ -623,33 +672,34 @@
        "      <td>1</td>\n",
        "      <td>non</td>\n",
        "      <td>24.913495</td>\n",
+       "      <td>corpulence noramele</td>\n",
        "      <td>normale</td>\n",
        "      <td>56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>70000 rows × 15 columns</p>\n",
+       "<p>70000 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         age  genre  taille  ...        imc  pression_arterielle  age_annee\n",
-       "id                           ...                                           \n",
-       "0      18393  homme     168  ...  21.967120              normale         50\n",
-       "1      20228  femme     156  ...  34.927679               élevée         55\n",
-       "2      18857  femme     165  ...  23.507805       noramel élevée         52\n",
-       "3      17623  homme     169  ...  28.710479               élevée         48\n",
-       "4      17474  femme     156  ...  23.011177             optimale         48\n",
-       "...      ...    ...     ...  ...        ...                  ...        ...\n",
-       "99993  19240  homme     168  ...  26.927438              normale         53\n",
-       "99995  22601  femme     158  ...  50.472681               élevée         62\n",
-       "99996  19066  homme     183  ...  31.353579               élevée         52\n",
-       "99998  22431  femme     163  ...  27.099251       noramel élevée         61\n",
-       "99999  20540  femme     170  ...  24.913495              normale         56\n",
+       "         age  genre  ...   pression_arterielle  age_annee\n",
+       "id                   ...                                 \n",
+       "0      18393  homme  ...               normale         50\n",
+       "1      20228  femme  ...   hypertension légère         55\n",
+       "2      18857  femme  ...        noramel élevée         52\n",
+       "3      17623  homme  ...  hypertension modérée         48\n",
+       "4      17474  femme  ...              optimale         48\n",
+       "...      ...    ...  ...                   ...        ...\n",
+       "99993  19240  homme  ...               normale         53\n",
+       "99995  22601  femme  ...   hypertension légère         62\n",
+       "99996  19066  homme  ...   hypertension sévère         52\n",
+       "99998  22431  femme  ...        noramel élevée         61\n",
+       "99999  20540  femme  ...               normale         56\n",
        "\n",
-       "[70000 rows x 15 columns]"
+       "[70000 rows x 16 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "e9028322",
    "metadata": {},
    "outputs": [],
@@ -684,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "eabc6091",
    "metadata": {},
    "outputs": [
@@ -693,12 +743,12 @@
      "output_type": "stream",
      "text": [
       "pression_systo\n",
-      "\tUpper : 220.0 | shape : (48, 15)\n",
-      "\tLower : 40.0 | shape : (181, 15)\n",
+      "\tUpper : 220.0 | shape : (48, 16)\n",
+      "\tLower : 40.0 | shape : (181, 16)\n",
       "\n",
       "pression_diasto\n",
-      "\tUpper : 130.0 | shape : (1015, 15)\n",
-      "\tLower : 40.0 | shape : (58, 15)\n",
+      "\tUpper : 130.0 | shape : (1015, 16)\n",
+      "\tLower : 40.0 | shape : (58, 16)\n",
       "\n"
      ]
     }
@@ -710,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "6ec98ea4",
    "metadata": {},
    "outputs": [],
@@ -724,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "6bf2f449",
    "metadata": {},
    "outputs": [
@@ -875,7 +925,7 @@
        "[8 rows x 9 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,11 +936,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d9451092",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_heart.to_csv(\"heart-disease-model\")"
+   ]
   }
  ],
  "metadata": {
