feat : add updated notebook

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -289,6 +289,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "27eb581c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = [0, 1, 13, 20, 60, np.inf]\n",
+    "labels = ['infant', 'kid', 'teen', 'adult', 'senior citizen']\n",
+    "transformer = preprocessing.FunctionTransformer(\n",
+    "pd.cut, kw_args={'bins': bins, 'labels': labels, 'retbins': False}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "a96a2cdb",
    "metadata": {},
@@ -336,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "98f7d063",
+   "id": "5c3ef9ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +361,7 @@
     "        return \"maigreur\"\n",
     "    \n",
     "    if imc >=18.5 and imc < 25:\n",
-    "        return \"corpulence noramele\"\n",
+    "        return \"corpulence normale\"\n",
     "    \n",
     "    if imc >= 25 and imc < 30:\n",
     "        return \"surpoids\"\n",
@@ -379,7 +392,7 @@
     "        return \"normale\"\n",
     "    \n",
     "    if press_systo < 140 and press_diasto < 90:\n",
-    "        return \"noramel élevée\"\n",
+    "        return \"normal élevée\"\n",
     "    \n",
     "    if press_systo < 150 and press_diasto < 100:\n",
     "        return \"hypertension légère\"\n",
@@ -936,14 +949,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d9451092",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_heart.to_csv(\"heart-disease-model\")"
+    "df_heart.to_csv(\"heart-disease-model.csv\")"
    ]
   }
  ],
